# bumblebee-ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: .ck.json  lessons-learned.md  metadata.json  plan.md  settings.json
.claude/agents/: bb-issue.md  code-reviewer.md  nextjs-developer.md  strapi-developer.md
.claude/hooks/: lessons-learned.cjs  node-hook-runner.sh  skill-suggest.cjs  structure-tracker.cjs
.claude/schemas/: ck-config.schema.json
.claude/scripts/: validate-skill-frontmatter.py
.claude/session-state/: latest.md
.claude/skills/: .skills-manifest.json
.github/workflows/: ci.yml  deploy.yml  prompt-validator.yml  release.yml
alembic/: env.py
alembic/versions/: 20260518_0001_initial_schema.py  20260519_0001_plugin_registrations.py  20260521_0001_users_apikeys.py  20260522_0001_oauth_user_columns.py  20260525_0001_workspace_tenancy.py  20260525_0002_agent_nodes.py  20260525_0003_device_project_binding.py  20260525_0004_issue_relations_and_custom_fields.py  20260602_0001_collaboration_progress.py
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/src/: __init__.py  config.py  database.py  main.py
api/src/models/: __init__.py  agent_definition.py  agent_session.py  base.py  chat_session.py  comment.py  event.py  issue.py  knowledge_entry.py  notification.py  project.py  scope_lease.py  skill.py  workflow.py  workflow_run.py
api/src/routers/: chat.py  events.py  health.py  issues.py  projects.py  workflow_runs.py
api/src/schemas/: common.py  event.py  issue.py  project.py
api/src/seeds/: seed_default.py
api/src/services/control/: workflow_engine.py
api/src/services/dispatch/: lease_manager.py  task_queue.py
api/src/services/execution/: harness.py
api/src/services/obs/: cost_tracker.py
api/src/services/safety/: budget_enforcer.py  failure_classifier.py  loop_detector.py
api/src/services/state/: event_log.py  issue_memory.py
api/src/services/tool/: registry.py
api/tests/: conftest.py  test_chat.py  test_e2e_scenarios.py  test_health.py  test_issue_memory.py  test_lease_manager.py  test_safety.py  test_smoke.py  test_task_queue.py  test_tool_registry.py  test_workflow_engine.py  test_workflow_run.py
bumblebee/: __init__.py  cli.py  config.py  database.py  main.py
bumblebee-plugin-example/: pyproject.toml
bumblebee-plugin-example/bumblebee_plugin_example/: __init__.py
bumblebee-plugin-example/bumblebee_plugin_example/agent_defs/: greeter.md
bumblebee-plugin-example/bumblebee_plugin_example/skills/hello-skill/: SKILL.md
bumblebee-plugin-example/bumblebee_plugin_example/workflows/: example-hello.yaml
bumblebee/auth/: __init__.py  dependencies.py  security.py
bumblebee/cli_client/: __init__.py  graphql.py
bumblebee/eval/: __init__.py  judges.py  runner.py  spec.py
bumblebee/graphql/: __init__.py  auth_mutations.py  context.py  mutations.py  queries.py  schema.py  types.py
bumblebee/installer/: __init__.py  bundler.py
bumblebee_mcp/: __init__.py  auth.py  cli.py  gemini_tools.py  http_server.py  server.py  tools.py
cli/: package.json  tsconfig.json
cli-node/: README.md  package-lock.json  package.json
docs/: README.md  api-reference.md  architecture-overview.md  brainstorm-master-plan-2026-03-19.md  brainstorm-multi-provider-multi-device-2026-03-17.md  brainstorm-space-battleship-2026-03-19.md  database-schema.md  deploy-guide-vi.md  design-system.md  disaster-recovery.md  dogfood-vi.md  flow-walkthroughs.md  getting-started-guide-vi.md  getting-started-guide.md  getting-started.md  gitflow.md  knowledge.md  mcp-integration.md  new-user-quickstart.md  phases-status.md  pipeline-and-workers.md  plan.md  quickstart-cross-project.md  source-layout.md  status-pipeline.md  streaming-architecture.md  stripe-integration.md  tasks-multi-provider.md  testing-guide.md  user-guide-vi.md  v2-deployment.md  walkthrough-vi.md  websocket-implementation.md  workflows.md
infra/: Caddyfile  cloudflare-dns-sync.sh  coolify-setup.md  docker-compose.coolify.yml  docker-compose.prod.yml  server-bootstrap.sh
references/forge/dev/src-tauri/: Cargo.toml  tauri.conf.json
references/forge/dev/src-tauri/capabilities/: default.json
references/forge/dev/src-tauri/src/: main.rs
references/forge/dev/src-tauri/src/claude_cli/: agent.rs  mcp.rs  mod.rs  platform.rs  session.rs  spawn.rs  worktree.rs
references/forge/dev/src-tauri/src/config/: mcp.rs  mod.rs  sessions.rs  skills.rs  wsl.rs
references/forge/dev/src-tauri/src/websocket/: mod.rs
scripts/: add-workspace-mixin.py  backup-postgres-cron.sh  backup.sh  capture-billing-page.py  capture-design-system.py  capture-e2e-walkthrough.py  capture-issue-management.py  capture-onboarding-pricing.py  capture-settings-and-whatsnew.py  capture-ui-overhaul.py  coolify-bootstrap.py  coolify-create-token.py  entrypoint.sh  generate_landing_images.py  install.ps1  install.sh  release.py  restore.sh  restructure-backlog-hierarchy.py  run-full-flow-demo.py  run-planner-demo.py  run-walkthrough.mjs  seed-bumblebee-improvement-issues.py  seed-relations-and-fields.py  stripe-setup-catalog.py  test-e2e-integration.sh  test-graphql-smoke.py  test-stripe-flow.py  test-task-routing-flow.py  test-vision-flow.py  update-cloudflare-tunnel.py
tests/: conftest.py  test_audit_and_ws_auth.py  test_auth.py  test_billing_phase_d.py  test_e2e_scenarios.py  test_integration_real.py  test_issue_crud.py  test_issue_links.py  test_issue_memory.py  test_lease_manager.py  test_mcp_gemini_tools.py  test_mcp_server.py  test_new_modules_smoke.py  test_phase_2_5_6_7.py  test_plugin_loader.py  test_projects_rbac.py  test_prompts_validator.py  test_safety.py  test_task_queue.py  test_tool_executor.py  test_tool_registry.py  test_websocket.py  test_workflow_engine.py  test_workspace_selection.py  test_workspaces_rbac.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
workflows/: chat-assistant-flow.yaml  feature-complex-flow.yaml  simple-fix-flow.yaml
(+1185 files in other folders)
