[project]
name = "bumblebee-ai"
version = "0.4.0"
description = "Bumblebee v3 — multi-agent concurrent task management platform"
requires-python = ">=3.12"
authors = [
    {name = "Thanh Le Cong", email = "ai010@grytt.co"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "agents", "task-management", "automation", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.42.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "strawberry-graphql[fastapi]>=0.250.0",
    "stripe>=11.0.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/lct1407/bumblebee"
Repository = "https://github.com/lct1407/bumblebee"
Documentation = "https://github.com/lct1407/bumblebee/blob/master/docs/getting-started.md"

[project.scripts]
bumblebee = "bumblebee.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bumblebee*"]
exclude = ["tests*", "alembic*", "web*", "scripts*", "docs*"]

[tool.setuptools.package-data]
bumblebee = ["workflows/*.yaml", "data/ecc-vendored/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/I = standard (errors, undefined, imports). UP = py3 upgrade.
# B/N/RUF dropped for now — generate many false positives on legacy code
# that needs separate refactor. Re-enable per-rule as code is cleaned.
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # line-length handled by formatter, not lint
    "E701",  # multiple-statements-on-one-line-colon (style)
    "E702",  # multiple-statements-on-one-line-semicolon (style)
    "E741",  # ambiguous-variable-name (false positives on `l`, `I`)
    "E402",  # module-import-not-at-top (sometimes intentional)
    "F403",  # star imports — acceptable in __init__.py re-exports
    "F405",  # star-import undefined (matches F403 case)
    "UP037", # quoted-annotation (defer)
]
exclude = [
    "alembic/versions/*",   # generated migrations — out of scope
    ".claude/*",            # tool configs
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
