[package]
name = "forge-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
